# poseidon

./: Cargo.toml
src/: permutation.rs  poseidon.rs  spec.rs
